# RDJ-ROS

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: a_axis_node.eds  bus.yml  bus.yml.in  mock_ros2_control.yaml  robot_params.yaml  servo_node.eds  stepper_node.eds
docs/: BEHAVIOR_TREE.md  DEPLOYMENT.md  HMI_AND_IDENTIFICATION.md  MOTION.md  SYSTEM_ARCHITECTURE.md
src/canopen_bridge/: package.xml  setup.cfg  setup.py
src/canopen_bridge/canopen_bridge/: bridge_node.py  codec.py
src/canopen_bridge/test/: test_codec.py
src/diagnostics_aggregator/: package.xml  setup.cfg  setup.py
src/diagnostics_aggregator/diagnostics_aggregator/: diagnostics_node.py
src/led_controller/: package.xml  setup.cfg  setup.py
src/led_controller/led_controller/: led_controller_node.py
src/lidar_safety/: package.xml  setup.cfg  setup.py
src/lidar_safety/lidar_safety/: lidar_safety_node.py
src/mock_nodes/: package.xml  setup.cfg  setup.py
src/mock_nodes/mock_nodes/: mock_canopen_master.py
src/motion_coordinator/: package.xml  setup.cfg  setup.py
src/motion_coordinator/motion_coordinator/: can_interface.py  homing.py  motion_coordinator_node.py
src/state_machine/: package.xml  setup.py
src/state_machine/state_machine/: actions.py  blackboard_keys.py  conditions.py  recovery.py  state_machine_node.py  tree_builder.py
src/turntable_monitor/: package.xml  setup.cfg  setup.py
src/turntable_monitor/turntable_monitor/: turntable_monitor_node.py
src/vinyl_robot/: CMakeLists.txt  package.xml
src/vinyl_robot/launch/: bringup.launch.py  mock_bringup.launch.py
src/vinyl_robot_msgs/: CMakeLists.txt  package.xml
src/vinyl_robot_msgs/action/: ExecuteTrajectory.action  FlipRecord.action  Grip.action  HomeAll.action  MoveToPosition.action  PressPlay.action  SetSpeed.action
src/vinyl_robot_msgs/msg/: AlbumMetadata.msg  MotionStatus.msg  SafetyStatus.msg  StateMachineStatus.msg  Waypoint.msg
src/web_interface/: CMakeLists.txt  package.xml
src/web_interface/launch/: web_ui.launch.py
src/web_interface/web/: app.js  index.html
