<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_bridge</name>
  <version>0.1.0</version>
  <description>
    Translates between ros2_canopen ProxyDriver COData topics and the
    UInt8MultiArray PDO interface expected by motion_coordinator.
    Handles all five CAN nodes (x_axis, z_axis, a_axis, pincher, player).
  </description>
  <maintainer email="todo@rdj.local">RDJ Robot</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>canopen_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>motion_coordinator</test_depend>
  <test_depend>mock_nodes</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
